2010-01-07  Eric Carlson  <eric.carlson@apple.com>

Reviewed by Maciej Stachowiak.

        https://bugs.webkit.org/show_bug.cgi?id=33272
        'abort' event still fired as a progress event

        rdar://6710625
        Test media/video-error-abort.html doesn't work

        Test: http/tests/media/video-error-abort.html

        * html/HTMLMediaElement.cpp:
        (WebCore::HTMLMediaElement::scheduleEvent): Incorporate code from enqueueEvent.
        (WebCore::HTMLMediaElement::loadInternal): Fix 'abort' event firing logic missed
        in https://bugs.webkit.org/show_bug.cgi?id=30513. Change order of initialization
        to match spec wording.
        * html/HTMLMediaElement.h: Remove enqueueEvent prototype.

2010-01-07  Eric Carlson  <eric.carlson@apple.com>

        Reviewed by Maciej Stachowiak.

        https://bugs.webkit.org/show_bug.cgi?id=33272
        'abort' event still fired as a progress event

        rdar://6710625
        Test media/video-error-abort.html doesn't work

        * http/tests/media/video-error-abort-expected.txt: Copied from LayoutTests/media/video-error-abort-expected.txt.
        * http/tests/media/video-error-abort.html: Copied from LayoutTests/media/video-error-abort.html.
            Modified to run with slow loading cgi, add test to ensure that 'abort' event is not a
            progress event.
        * media/video-error-abort-expected.txt: Removed.
        * media/video-error-abort.html: Removed.



Canonical link: https://commits.webkit.org/44335@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@52923 268f45cc-cd09-0410-ab3c-d52691b4dbfc